--- a/ExamenGrupal_AventuraDeTexto.csproj
+++ b/ExamenGrupal_AventuraDeTexto.csproj
@@ -43,6 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BosqueEncantado.cs" />
+    <Compile Include="CastilloAbandonado.cs" />
+    <Compile Include="CuevaOscura.cs" />
+    <Compile Include="Jugador.cs" />
+    <Compile Include="Mapa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
